--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+---
+layout: home
+title: Benji Copan
+description: Personal website for full stack developer Benji Copan
+---
 <!DOCTYPE html>
 <html>
   <head>
