--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-      <h1>Laura Thomson</h1>
-      <h2>I'm a Professional Photographer In New York City</h2>
+      <h1>Benji Copan</h1>
+      <h2>I'm a Full Stack Developer in Minneapolis</h2>
       <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
     </div>
   </section><!-- End Hero -->
@@ -82,7 +82,10 @@
         <div class="section-title">
           <span>About Me</span>
           <h2>About Me</h2>
-          <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
+          <p>As a full stack developer with a background in physics, I’m equipped with a deep set of mathematical,
+            analytical, and computational tools for taking on the complex problems facing mankind. I’m committed
+            to using my career to tackle important and neglected issues. That goal has driven me to continually
+            expand my skill set so I can have a bigger impact.</p>
         </div>
 
         <div class="row">
@@ -92,18 +95,15 @@
               <div class="row">
                 <div class="col-lg-6">
                   <ul>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>Laura Thomso</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>Benji Copan</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>GitHub:</strong> <span><a href="https://github.com/Lycidas-BC">github.com/Lycidas-BC</a></span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Minneapolis, MN</span></li>
                   </ul>
                 </div>
                 <div class="col-lg-6">
                   <ul>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>email@example.com</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>28</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span><a href="mailto:benji1220@gmail.com">benji1220@gmail.com</a></span></li>
                   </ul>
                 </div>
               </div>
