new pictures, filled out resume

--- a/index.html
+++ b/index.html
@@ -82,10 +82,13 @@
         <div class="section-title">
           <span>About Me</span>
           <h2>About Me</h2>
-          <p>As a full stack developer with a background in physics, I’m equipped with a deep set of mathematical,
-            analytical, and computational tools for taking on the complex problems facing mankind. I’m committed
-            to using my career to tackle important and neglected issues. That goal has driven me to continually
-            expand my skill set so I can have a bigger impact.</p>
+          <p>Outside of coding, I’m passionate about movies, literature, biking, and helping my community. I’ve
+            worked in the sound department of numerous independent film productions in Minnesota. My poetry
+            has been published by Scholastic Books. Before the pandemic, I biked an average of 30 miles a day,
+            weather permitting. I’ve done some kind of community service almost every week since middle school,
+            ranging from distributing food for migrant workers to providing childcare so parents can attend events
+            to providing clothing and breakfast to the Minneapolis homeless population. My most recent volunteer
+            experience was teaching English to Somali refugees before the pandemic.</p>
         </div>
 
         <div class="row">
@@ -97,6 +100,7 @@
                   <ul>
                     <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>Benji Copan</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>GitHub:</strong> <span><a href="https://github.com/Lycidas-BC">github.com/Lycidas-BC</a></span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>LinkedIn:</strong> <span><a href="https://www.linkedin.com/in/b-copan">linkedin.com/in/b-copan</a></span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Minneapolis, MN</span></li>
                   </ul>
                 </div>
@@ -104,6 +108,7 @@
                   <ul>
                     <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>28</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span><a href="mailto:benji1220@gmail.com">benji1220@gmail.com</a></span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>IMDB:</strong> <span><a href="https://www.imdb.com/name/nm9392713/">Benji Copan</a></span></li>
                   </ul>
                 </div>
               </div>
@@ -178,63 +183,107 @@
         <div class="section-title">
           <span>My Resume</span>
           <h2>My Resume</h2>
-          <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
+          <p>As a full stack developer with a background in physics, I’m equipped with a deep set of mathematical,
+            analytical, and computational tools for taking on the complex problems facing mankind. I’m committed
+            to using my career to tackle important and neglected issues. That goal has driven me to continually
+            expand my skill set so I can have a bigger impact.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-6">
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
-              <h4>Alice Barkley</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <h4>Benji Copan</h4>
               <p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>Minneapolis, MN</li>
+                <li><a href="mailto:benji1220@gmail.com">benji1220@gmail.com</a></li>
               </ul>
               </p>
             </div>
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>Full Stack Software Engineering Certification</h4>
+              <h5>expected graduation September 2021</h5>
+              <p><em>Prime Digital Academy</em></p>
+              <p>Full time, immersive, remote full stack development program</p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>Applied Physics B.A.</h4>
+              <h5>2011 - 2015</h5>
+              <p><em>Bethel University</em></p>
+              <p>Mathematics Minor</p>
             </div>
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Full Stack Software Development Student</h4>
+              <h5>May 2021 - Present</h5>
+              <p><em>Prime Digital Academy</em></p>
               <p>
+                Solo Project: <strong>CineFiles</strong>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Created an app to keep track of your media library and make it robustly searchable</li>
+                <li>Can be used to organize media, compare different editions of movies, and browse endlessly</li>
+                <li>Developed using Javascript, CSS, React, Redux, Redux-Saga, Passport, Node, Express, PostgreSQL, Axios, Cheerio, TMDB API, Material-UI</li>
+                <li><a href="https://www.linkedin.com/posts/b-copan_this-monday-i-had-the-opportunity-to-present-activity-6834318730105905152-ADqy">App demo</a></li>
               </ul>
               </p>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Software Engineer</h4>
+              <h5>Jul 2015 - Oct 2019</h5>
+              <p><em>Measurement Technology Laboratories</em></p>
               <p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Designed software for machine automation and data management</li>
+                <li>Scoped and implemented new software features for clients</li>
+              </ul>
+              </p>
+            </div>
+            <div class="resume-item">
+              <h4>Mathematics Tutor</h4>
+              <h5>Sep 2013 - May 2015</h5>
+              <p><em>Bethel University</em></p>
+              <p>
+              <ul>
+                <li>Helped students with homework, test prep, conceptual understanding</li>
+                <li>Pre-Calc, Calc, Calc II, Multivariable Calc, Linear Algebra, Discrete Math</li>
+              </ul>
+              </p>
+            </div>
+            <div class="resume-item">
+              <h4>Teachers Assistant</h4>
+              <h5>Sep 2013 - May 2015</h5>
+              <p><em>Bethel University</em></p>
+              <p>
+              <ul>
+                <li>Helped students with homework, test prep, conceptual understanding</li>
+              </ul>
+              </p>
+            </div>
+            <div class="resume-item">
+              <h4>NSF Funded Research</h4>
+              <h5>Summer 2014</h5>
+              <p><em>Bethel University</em></p>
+              <p>
+              <ul>
+                <li>Captured and analyzed shockwaves with a highly sensitive optical setup</li>
+              </ul>
+              </p>
+            </div>
+            <div class="resume-item">
+              <h4>Research Assistant / Statistical Consultant</h4>
+              <h5>Jun 2011 - Aug 2013</h5>
+              <p><em>Hanley Center</em></p>
+              <p>
+              <ul>
+                <li>Assisted Dr. Karen Dodge with research on addiction using neuroimaging and epigenetic markers</li>
+                <li>Wrote comprehensive literature reviews on addiction, neuroimaging, genetics, epigenetics, and statistical methods</li>
+                <li>Created and delivered presentations for health care professionals</li>
+                <li>Organized, analyzed, and discussed SPECT scan and mi-RNA patient data and study design</li>
               </ul>
               </p>
             </div>
