skills list added and formatted

--- a/index.html
+++ b/index.html
@@ -188,10 +188,111 @@
             to using my career to tackle important and neglected issues. That goal has driven me to continually
             expand my skill set so I can have a bigger impact.</p>
         </div>
+        <div class="resume-item">
+          <h3 class="resume-title">Skills</h3>
+          <ul style="overflow: hidden;">
+            <li  style="float: left; width: 225px; margin-right: 10px;">
+              JavaScript
+            </li>
+            <li  style="float: left; width: 225px; margin-right: 10px;">
+              HTML
+            </li>
+            <li  style="float: left; width: 225px; margin-right: 10px;">
+              CSS
+            </li>
+            <li  style="float: left; width: 225px; margin-right: 10px;">
+              LabVIEW
+            </li>
+            <li  style="float: left; width: 225px; margin-right: 10px;">
+              Node
+            </li>
+            <li  style="float: left; width: 225px; margin-right: 10px;">
+              Express
+            </li>
+            <li  style="float: left; width: 225px; margin-right: 10px;">
+              PostgreSQL
+            </li>
+            <li  style="float: left; width: 225px; margin-right: 10px;">
+              Axios
+            </li>
+            <li  style="float: left; width: 225px; margin-right: 10px;">
+              Ajax
+            </li>
+            <li  style="float: left; width: 225px; margin-right: 10px;">
+              React
+            </li>
+            <li  style="float: left; width: 225px; margin-right: 10px;">
+              React-Router
+            </li>
+            <li  style="float: left; width: 225px; margin-right: 10px;">
+              Redux
+            </li>
+            <li  style="float: left; width: 225px; margin-right: 10px;">
+              Redux-Saga
+            </li>
+            <li  style="float: left; width: 225px; margin-right: 10px;">
+              Bootstrap
+            </li>
+            <li  style="float: left; width: 225px; margin-right: 10px;">
+              Material-UI
+            </li>
+            <li  style="float: left; width: 225px; margin-right: 10px;">
+              Passport
+            </li>
+            <li  style="float: left; width: 225px; margin-right: 10px;">
+              Postman
+            </li>
+            <li  style="float: left; width: 225px; margin-right: 10px;">
+              MS SQL Server
+            </li>
+            <li  style="float: left; width: 225px; margin-right: 10px;">
+              MATLAB
+            </li>
+            <li  style="float: left; width: 225px; margin-right: 10px;">
+              Mathematica
+            </li>
+            <li  style="float: left; width: 225px; margin-right: 10px;">
+              Cheerio
+            </li>
+            <li  style="float: left; width: 225px; margin-right: 10px;">
+              SQLite
+            </li>
+            <li  style="float: left; width: 225px; margin-right: 10px;">
+              APIs
+            </li>
+            <li  style="float: left; width: 225px; margin-right: 10px;">
+              Jest Unit Testing
+            </li>
+            <li  style="float: left; width: 225px; margin-right: 10px;">
+              C#
+            </li>
+            <li  style="float: left; width: 225px; margin-right: 10px;">
+              MVC
+            </li>
+            <li  style="float: left; width: 225px; margin-right: 10px;">
+              Git
+            </li>
+            <li  style="float: left; width: 225px; margin-right: 10px;">
+              Github
+            </li>
+            <li  style="float: left; width: 225px; margin-right: 10px;">
+              C++
+            </li>
+            <li  style="float: left; width: 225px; margin-right: 10px;">
+              Python
+            </li>
+            <li  style="float: left; width: 225px; margin-right: 10px;">
+              .NET
+            </li>
+            <li  style="float: left; width: 225px; margin-right: 10px;">
+              .NET Entity Framework Core
+            </li>
+        </ul>
+        </div>
 
         <div class="row">
           <div class="col-lg-6">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Benji Copan</h4>
               <p>
