--- a/index.html
+++ b/index.html
@@ -101,12 +101,11 @@
                     <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>Benji Copan</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>GitHub:</strong> <span><a href="https://github.com/Lycidas-BC">github.com/Lycidas-BC</a></span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>LinkedIn:</strong> <span><a href="https://www.linkedin.com/in/b-copan">linkedin.com/in/b-copan</a></span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Minneapolis, MN</span></li>
                   </ul>
                 </div>
                 <div class="col-lg-6">
                   <ul>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>28</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Minneapolis, MN</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span><a href="mailto:benji1220@gmail.com">benji1220@gmail.com</a></span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>IMDB:</strong> <span><a href="https://www.imdb.com/name/nm9392713/">Benji Copan</a></span></li>
                   </ul>
@@ -408,7 +407,7 @@
                 <h4>Ceo &amp; Founder, Measurement Technology Laboratories</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Benji served as the go to guy for trouble shooting software code and added a strong scientific back ground rising from his strengths in mathematics and physics.
+                    Benji served as the go-to guy for trouble shooting software code and added a strong scientific back ground rising from his strengths in mathematics and physics.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
