--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/KimmieKao.jpeg" class="testimonial-img" alt="">
                 <h3>Kimmie Kao</h3>
-                <h4>Vice Presiden of Operations, Measurement Technology Laboratories</h4>
+                <h4>Vice President of Operations, Measurement Technology Laboratories</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                     [Benji has] a deep knowledge of software... I would recommend Benji based on his problem solving skills, analytical thinking, and patience to understand client’s concerns.
