got rid of form, made contact section appear inline

--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -89,7 +89,7 @@
               <ul>
                 <li><strong>Category</strong>: App development</li>
                 <li><strong>Client</strong>: Prime Digital Academy solo project</li>
-                <li><strong>Project date</strong>: August, 2021</li>
+                <li><strong>Project date</strong>: August 2021</li>
                 <li><strong>Project URL</strong>: <a href="https://github.com/Lycidas-BC/prime-solo-project-2021">GitHub</a></li>
                 <li><strong>Demo</strong>: <a href="https://www.linkedin.com/posts/b-copan_this-monday-i-had-the-opportunity-to-present-activity-6834318730105905152-ADqy">link</a></li>
               </ul>
