--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                   </ul>
                 </div>
               </div>
-              <div class="row mt-n4">
+              <!-- <div class="row mt-n4">
                 <div class="col-md-6 mt-5 d-md-flex align-items-md-stretch">
                   <div class="count-box">
                     <i class="bi bi-emoji-smile" style="color: #20b38e;"></i>
@@ -143,10 +143,10 @@
                     <p><strong>Awards</strong> rerum asperiores dolor alias quo reprehenderit eum et nemo pad der</p>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div><!-- End .content-->
 
-            <div class="skills-content ps-lg-4">
+            <!-- <div class="skills-content ps-lg-4">
               <div class="progress">
                 <span class="skill">HTML <i class="val">100%</i></span>
                 <div class="progress-bar-wrap">
@@ -167,13 +167,14 @@
                   <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
-            </div>
+            </div> -->
 
           </div>
         </div>
 
       </div>
-    </section><!-- End About Me Section -->
+    </section>
+    <!-- End About Me Section -->
 
     <!-- ======= My Resume Section ======= -->
     <section id="resume" class="resume">
